--- a/MakeBuilder/pom.xml
+++ b/MakeBuilder/pom.xml
@@ -58,7 +58,6 @@
                 <groupId>org.jkva.makebuilder</groupId>
                 <artifactId>makebuilder-annotations</artifactId>
                 <version>${project.version}</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.jkva.makebuilder</groupId>
@@ -84,19 +83,21 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>1.4.2</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
                 <version>1.4.2</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
                 <version>2.3</version>
-                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>2.3.16</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
