--- a/trunk/MakeBuilder/test/pom.xml
+++ b/trunk/MakeBuilder/test/pom.xml
@@ -98,6 +98,7 @@
             <artifactId>makebuilder-annotations</artifactId>
         </dependency>
 
+        <!-- This dependency is used in the compilation process -->
         <dependency>
             <groupId>org.jkva.makebuilder</groupId>
             <artifactId>makebuilder-core</artifactId>
