--- a/trunk/MakeBuilder/pom.xml
+++ b/trunk/MakeBuilder/pom.xml
@@ -15,14 +15,13 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jkva.makebuilder</groupId>
     <artifactId>makebuilder-root</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <packaging>pom</packaging>
 
@@ -102,9 +101,9 @@
     </dependencyManagement>
 
     <scm>
-        <connection>scm:svn:http://make-builder.googlecode.com/svn/trunk/</connection>
-        <developerConnection>scm:svn:https://make-builder.googlecode.com/svn/trunk/</developerConnection>
-        <url>http://code.google.com/p/make-builder/</url>
+        <connection>scm:svn:http://make-builder.googlecode.com/svn/tags/makebuilder-root-1.0</connection>
+        <developerConnection>scm:svn:https://make-builder.googlecode.com/svn/tags/makebuilder-root-1.0</developerConnection>
+        <url>http://code.google.com/p/make-builder/tags/makebuilder-root-1.0</url>
     </scm>
 
 </project>
