--- a/trunk/MakeBuilder/core/pom.xml
+++ b/trunk/MakeBuilder/core/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.jkva.makebuilder</groupId>
         <artifactId>makebuilder-root</artifactId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
