--- a/MakeBuilder/pom.xml
+++ b/MakeBuilder/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.jkva.makebuilder</groupId>
     <artifactId>makebuilder-root</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
