--- a/trunk/MakeBuilder/pom.xml
+++ b/trunk/MakeBuilder/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.jkva.makebuilder</groupId>
     <artifactId>makebuilder-root</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <packaging>pom</packaging>
 
@@ -123,8 +123,8 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:svn:http://make-builder.googlecode.com/svn/trunk</connection>
-        <developerConnection>scm:svn:https://make-builder.googlecode.com/svn/trunk</developerConnection>
+        <connection>scm:svn:http://make-builder.googlecode.com/svn/tags/makebuilder-1_0</connection>
+        <developerConnection>scm:svn:https://make-builder.googlecode.com/svn/tags/makebuilder-1_0</developerConnection>
     </scm>
 
 </project>
