--- a/test/pom.xml
+++ b/test/pom.xml
@@ -108,5 +108,11 @@
             <artifactId>joda-time</artifactId>
             <version>1.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
