--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.jkva.makebuilder</groupId>
     <artifactId>makebuilder-root</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1-JBloch</version>
 
     <packaging>pom</packaging>
 
@@ -35,18 +35,16 @@
     </modules>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
 
         <extensions>
             <extension>
@@ -124,8 +122,8 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:svn:http://make-builder.googlecode.com/svn/trunk</connection>
-        <developerConnection>scm:svn:https://make-builder.googlecode.com/svn/trunk</developerConnection>
+        <connection>scm:svn:http://make-builder.googlecode.com/svn/tags/makebuilder-root-1.1-JBloch</connection>
+        <developerConnection>scm:svn:https://make-builder.googlecode.com/svn/tags/makebuilder-root-1.1-JBloch</developerConnection>
     </scm>
 
 </project>
