--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.jkva.makebuilder</groupId>
         <artifactId>makebuilder-root</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
