--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.jkva.makebuilder</groupId>
     <artifactId>makebuilder-root</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>2.0</version>
 
     <packaging>pom</packaging>
 
@@ -122,8 +122,8 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:svn:http://make-builder.googlecode.com/svn/trunk</connection>
-        <developerConnection>scm:svn:https://make-builder.googlecode.com/svn/trunk</developerConnection>
+        <connection>scm:svn:http://make-builder.googlecode.com/svn/tags/makebuilder-root-2.0</connection>
+        <developerConnection>scm:svn:https://make-builder.googlecode.com/svn/tags/makebuilder-root-2.0</developerConnection>
     </scm>
 
     <properties>
